Hot fix for z-index

--- a/src/assets/styles/cmps/_AppHeader.scss
+++ b/src/assets/styles/cmps/_AppHeader.scss
@@ -94,7 +94,7 @@
   padding: 8px 0;
   margin-top: 34px;
   font-size: 14px;
-  z-index: 1;
+  z-index: 10;
 
   .back-drop {
     position: fixed;
