--- a/src/assets/styles/cmps/_ExploreBar.scss
+++ b/src/assets/styles/cmps/_ExploreBar.scss
@@ -241,7 +241,7 @@
   position: fixed;
   top: 80px;
   left: 0;
-  z-index: -1;
+  z-index: 2;
   height: 100vh;
   width: 100%;
 }
